# curso-python-smart-finance

./: README.md  main.py  pyproject.toml
aula-01/: 2_exercicio1.py  3_exercicio2.py  4_exercicio3.py
aula-02/: 1_exemplo1.py  2_exemplo2.py  3_exemplo3.py  4_exemplo4.py
